# xcp-idl

./: .coverage.sh  .gitignore  .travis.yml  INSTALL.md  Makefile  _oasis  _tags  myocamlbuild.ml  opam  setup.ml  xcp.odocl  xcp.opam
cluster/: client.ml  cluster_cli.ml  cluster_client.ml  cluster_idl.ml  cluster_interface.ml  jbuild
gpumon/: gpumon_interface.ml  xcp_gpumon.mldylib
lib/: META  channel_helper.ml  debug.ml  debug.mli  dune  jbuild  open_uri.ml  posix_channel.ml  task_server.ml  xapi_idl.ml  xcp_channel_protocol.mli  xcp_client.ml  xcp_coverage.mli  xcp_service.ml  xcp_service.mli
lib/coverage/: enabled.ml
lib_test/: debug_test.ml  jbuild  test.ml
lib_test/test_data/varstore/privileged/requests/: create.request.0  destroy.request.0
memory/: memory_interface.ml
misc/: channel_helper.ml
network/: network_client.ml  network_interface.ml  network_stats.ml
rrd/: ds.ml  dune  rrd_interface.ml
storage/: storage_interface.ml  storage_skeleton.ml  storage_test.ml  vdi_automaton.ml
v6/: v6_client.ml  v6_interface.ml
varstore/deprivileged/: dune
varstore/privileged/: dune
xen/: device_number.ml  device_number.mli  dune  xcp_xen.mllib  xen_test.ml  xenops_interface.ml  xenops_interface_upgrades.ml  xenops_types.ml
xen_test/: test_interface_upgrade.ml
